@@ -33,7 +33,14 @@ endif
 ifneq "$(wildcard /usr/share/misc/config.guess)" ""
 	cp -f /usr/share/misc/config.guess config.guess
 endif
-	./configure $(CROSS) --enable-shared=no --prefix=/usr --with-sql=no --with-workdir=/var/lib/cfengine3 --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs"
+	./configure $(CROSS) 	--enable-shared=no \
+							--prefix=/usr \
+							--with-sql=no \
+							--with-workdir=/var/lib/cfengine3 \
+							--mandir=\$${prefix}/share/man \
+							--infodir=\$${prefix}/share/info \
+							--htmldir=\$${prefix}/share/doc/cfengine3/html \
+							CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs"
 
 
 build: build-stamp
