@@ -9,6 +9,9 @@ cfengine3 (3.1.5~b1) unstable; urgency=low
   * debian/copyright:
     + removing any reference to repack.sh and its licenses
     + copyright updates suggested by Mikhail Gusarov (Closes: 620961)
+  * debian/rules:
+    + reformatted configure opts and added htmldir to include the html docs in
+      the package (Closes: 609367)
 
  -- Antonio Radici <antonio@debian.org>  Mon, 11 Apr 2011 17:45:21 +0100
 
